# nodetool-core

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  =0.0.7  AGENTS.md  AGENT_CLI.md  CHANGELOG.md  CHECKPOINT_IMPLEMENTATION.md  CLAUDE.md  COMFY_TEMPLATE_SYSTEM.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.agent  Dockerfile.comfy  Dockerfile.cpu  Dockerfile.dev  Dockerfile.e2e  Dockerfile.hf  Dockerfile.proxy  GATEWAY_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MULTI_EDGE_INPUT_LIST.md  Makefile  OBSERVABILITY.md  OPENCLAW_INTEGRATION_SUMMARY.md  README.md  README_RUNPOD.md  REFACTOR_COMPLETE.md  REFACTOR_PROGRESS.md  RELEASE_RISK_ASSESSMENT.md  REPOSITORY_GUIDELINES.md  RESUMABLE_WORKFLOWS.md  RESUMABLE_WORKFLOWS_DESIGN.md  SECURITY.md  STATE_MANAGER_IMPLEMENTATION.md  (+57 more)
.claude/: settings.local.json
.claude/agents/: nodetool-workflow-designer.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/opencode-memory/: OPTIMIZATION-SUMMARY.md  README.md  USAGE-GUIDE.md  build-test-lint.md  common-issues.md  features.md  insights.md  project-context.md  qa-status.md  repository-context.md  tech-stack.md
.github/workflows/: assistant-accessibility.yaml  assistant-coverage.yaml  assistant-docs-quality.yaml  assistant-features.yaml  assistant-hourly-improve.yaml  assistant-hourly-test.yaml  assistant-performance.yaml  assistant-research.yaml  assistant-security-audit.yaml  assistant.yml  auto-fix.yml  codeql.yml  codex.yaml  coding-agent.yml  copilot-setup-steps.yml  docker-comfy.yml  docker-integration-test.yml  docker-publish-e2e.yaml  docker-publish-proxy.yaml  docker-publish.yaml  openai-web-search.yml  opencode-accessibility.yaml  opencode-coverage.yaml  opencode-docs-quality.yaml  opencode-features.yaml  opencode-hourly-improve.yaml  opencode-hourly-test.yaml  opencode-performance.yaml  opencode-research.yaml  opencode-security-audit.yaml  opencode.yml  publish-pypi.yml  publish-wheel.yml  test.yml  ts-parity-harness.yml  typecheck.yml  web-search-example.yml
.jules/: bolt.md  sentinel.md
conda-lock/: environment-linux-64.lock.yml  environment-linux-aarch64.lock.yml
csharp/: README.md
csharp/Nodetool/: Nodetool.csproj  WebSocketRunnerClient.cs
debian/: README.md  changelog  control  copyright  debhelper-build-stamp  dput.cf.example  py3dist-overrides  python3-nodetool-core.postinst  rules
debian/scripts/: build-local.sh  build-ppa.sh
debian/source/: options
docker/comfy/: extra_model_paths.yaml  start.sh
docker/proxy/: Dockerfile
docs/: GITHUB_OAUTH.md  GOOGLE_OAUTH_old.md  MCP_TOOLS_INTEGRATION.md  OAUTH.md  agent_evaluator.md  agents.md  api-reference.md  api-server.md  architecture.md  asset-tracking.md  audio-stream.md  authentication.md  aws-lambda.md  background-jobs.md  chat-api.md  chat-cli.md  chat-providers.md  chat-server.md  chat.md  checkpoint_manager.md  cli.md  comfy-proxy.md  conf.py  configuration.md  deployment-journeys.md  deployment.md  docker-agent-endpoint.md  docker-execution.md  docker-resource-management.md  docker-testing.md  dsl.md  execution-strategies.md  gateway-protocol.md  glossary.md  graph_planner_evaluation.md  hf-deployment.md  index.md  index.rst  indexing.md  installation.rst  (+32 more)
docs/adr/: MODEL3D_TYPE_STRUCTURE.md  STATE_MANAGER_IMPLEMENTATION.md
docs/api-reference/: huggingface.md  index.md  runpod-websocket-runner.md  workflows.md
docs/concepts/: index.md  key-concepts.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/providers/: anthropic.md  comfyui.md  gemini.md  huggingface.md  ollama.md  openai.md  vllm.md
examples/: README.md  agent_config.yaml  ai_workflows_on_reddit.py  asset_tracking_example.py  audio_stream_example.py  audio_to_image.py  aws_lambda_handler.py  batch_website_scraper.py  batch_website_scraper_graph_planner.py  checkpoint_manager_example.py  chromadb_research_agent.py  dynamic_subtask_example.py  evaluate_graph_planner.py  gateway-client-example.md  gdp.csv  google_oauth_example.py  graph_planner_advanced_tests.py  graph_planner_data_transform.py  graph_planner_integration.py  graph_planner_preview_pattern.py  graph_planner_rag_pattern.py  graph_planner_simple_tests.py  graph_planner_type_inference_example.py  graph_planner_web_research.py  huggingface_oauth_example.md  image_upscaling.py  indie_hacker_journey.py  indie_hacker_journey_graph_planner.py  instagram_scraper_agent.py  instagram_scraper_task.py  learning_path_generator.py  linkedin_job_market_agent.py  minimax_example.py  model3d_example.py  node_tool_example.py  oauth_example.py  openai_image_generation_example.py  openclaw_integration_example.py  openrouter_example.py  parallel_browser_batch_test.py  (+34 more)
examples/docker_agent_endpoint/: Dockerfile  main.py
huggingface_hub/: __init__.py  constants.py  file_download.py  hf_api.py
huggingface_hub/utils/: tqdm.py
insights/accessibility/: api-error-message-patterns.md  env-var-documentation.md  log-message-actionability.md
insights/architecture/: circuit-breaker-pattern.md
insights/async/: async-barrier.md  async-batching-patterns.md  async-debounce-pattern.md  (+6 more)
scripts/: export_parity_snapshot.py  generate_package.py  inspect_hf_cache.py  server-otel.sh  test_comfyui.py  test_default_nodes.py  test_pool_concurrency.py
tests/: conftest.py  test_agent_cli.py  test_agent_integration.py  test_cli.py  test_cli_deploy_add.py  test_cli_run_helpers.py  test_graph_planner_evaluation.py  test_joblib_security.py  test_parity_snapshot_export.py  test_py_typed_marker.py  test_stdio_worker.py  test_stop_command_scenarios.py  test_ui_tools_flow.py
tests/package_tools/fixtures/sample_pkg/: pyproject.toml
tests/package_tools/fixtures/sample_pkg/src/nodetool/examples/nodetool-sample/: echo.json
tests/package_tools/fixtures/sample_pkg/src/nodetool/nodes/: demo.py
tools/: export_csharp_types.py  generate_docs.py  traceviewer.html
ts/: PARITY.md  PLAN.md  TASKS.md  TECH_DESIGN_direct_properties.md  WIDE_PARITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
(+1706 files in other folders)
