[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-core"
version = "0.6.0"
description = "Nodetool Core is the core library for Nodetool, providing the necessary functionality for building and running AI workflows."
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.10.13"

dependencies = [

    # Core dependencies
    "pydantic>=2.11.2",
    "python-multipart>=0.0.17",
    "aiohttp>=3.11.2",
    "websockets>=14.1",
    "fastapi>=0.115.5",
    "fastmcp>=2.12.4",
    "openapi-pydantic",
    "uvicorn>=0.32.0",
    "msgpack>=1.1.0",
    "networkx>=3.4.2",
    "supabase>=2.15.0",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.6",
    "docker==7.1.0",

    # Utils dependencies
    "aioconsole",
    "black>=24.10.0",
    "click>=8.1.7",
    "feedparser",
    "ftfy>=6.3.1",
    "importlib_metadata",
    "importlib-resources",
    "joblib",
    "jsonpath-ng>=1.7.0",
    "jsonschema",
    "psutil>=6.1.0",
    "nvidia-ml-py>=13.580.65",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.50",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "setuptools>=80.8.0",
    "tabulate>=0.9.0",
    "tomli>=2.2.1",
    "tomlkit",
    "tqdm>=4.67.0",

    # Document processing dependencies
    "bs4==0.0.2",
    "langchain-text-splitters==0.3.11",
    "html2text",
    "markitdown",
    "PyMuPDF==1.25.2",
    "pymupdf4llm==0.0.17",
    "jinja2==3.1.6",

    # AI dependencies
    "anthropic",
    "huggingface_hub>=0.35.3",
    "openai>=2.3.0",
    # "fal-client==0.5.6",
    "gguf>=0.17.1",
    "ollama>=0.6.0",
    "tiktoken",
    "sentencepiece",
    "google-genai>=1.42.0",
    # "replicate==1.0.3",
    "runpod",
    "mcp",

    # Media dependencies
    "ffmpeg-python>=0.2.0",
    "pillow>=10.3.0,<11.0.0",            # due to mflux
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "pydub>=0.25.1",
    "opencv-python-headless>=4.11.0.86",

    # Data dependencies
    "numpy>=2.0.0",
    "pandas>=2.2.3",
    "llama-index-core>=0.14.4",
    "llama-index-embeddings-ollama>=0.8.3",
    "matplotlib==3.9.2",
    "seaborn>=0.13.2",
    "pypandoc>=1.14.0",

    # Database and storage
    "chromadb>=1.0.20",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "boto3>=1.35.63",
    "pymemcache>=4.0.0",
    "protobuf<=3.20.3",
    "moto>=5.1.4",

    # Web and networking
    "httpx>=0.27.2",
    "websocket-client>=1.8.0",
    "pyngrok>=7.2.8",
    "playwright>=1.40.0",
    "hf_xet>=0.0.1",

    # Authentication and security
    "annotated-types>=0.7.0",
    "authlib>=1.3.2",
    "itsdangerous",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "aioresponses>=0.7.8",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.0",  # Parallel test execution
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
nodetool = "nodetool.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
