[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-core"
version = "0.6.3-rc.47"
description = "Nodetool Core is the core library for Nodetool, providing the necessary functionality for building and running AI workflows."
readme = "README.md"
authors = [{ name = "Matthias Georgi", email = "matti.georgi@gmail.com" }]
requires-python = ">=3.11"

dependencies = [

    # Core — worker subprocess communication
    "pydantic>=2.11.2",
    "msgpack>=1.1.0",
    "websockets>=14.1",
    "httpx>=0.27.2",
    "aiohttp>=3.13.1",
    "brotli>=1.2.0",
    "pycares<5",

    # Node execution utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "keyring>=25.5.0",
    "cryptography>=43.0.0",
    "psutil>=6.1.0",
    "tqdm>=4.67.0",

    # Media processing (used by nodes via ProcessingContext)
    "pillow < 11.0.0",
    "numpy>=2.0.0,<2.4",
    "pydub>=0.25.1",

    # HuggingFace integration (used by HF nodes)
    "huggingface_hub>=0.35.3",
    "hf_xet>=0.0.1",
    "hf_transfer",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
# Vectorstore nodes (chromadb + langchain)
vectorstore = [
    "chromadb>=1.4.0",
    "langchain-text-splitters==1.1.1",
    "bs4==0.0.2",
]
# Document processing nodes
documents = [
    "html2text",
    "markitdown",
    "PyMuPDF>=1.25.2",
    "pymupdf4llm>=0.0.27",
    "jinja2==3.1.6",
    "pypandoc>=1.14.0",
    "python-docx==1.2.0",
    "pdfplumber>=0.11.4",
    "openpyxl>=3.1.3",
]
# OCR nodes
ocr = [
    "paddleocr>=3.2.0",
    "paddlepaddle",
    "pytesseract>=0.3.13",
]
# Data visualization nodes
viz = [
    "matplotlib==3.10.8",
    "seaborn>=0.13.2",
]
# Video processing (opencv, imageio)
video = [
    "opencv-python-headless>=4.11.0.86",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "ffmpeg-python>=0.2.0",
]
# Data processing (pandas, joblib, etc.)
data = [
    "pandas>=2.2.3",
    "joblib",
    "ftfy>=6.3.1",
    "networkx>=3.4.2",
    "tiktoken",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.0",
    "aioresponses>=0.7.8",
    "mypy>=1.0.0",
    "ruff==0.15.2",
    "ty>=0.0.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
include = [
    "src/nodetool/package_metadata/*.json",
]

# Ruff configuration for linting and formatting
[tool.ruff]
# Python version
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable useful rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific rules
]

# Ignore specific rules (low-value or too noisy)
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (sometimes needed)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "F401",   # imported but unused (common in __init__.py)
    "F811",   # redefined while unused
    "UP006",  # use built-in collection type annotations
    "UP035",  # deprecated typing aliases (Dict, List, etc.)
    "UP045",  # prefer `X | None` over `Optional[X]`
    "RUF002", # NBSP vs '-' nit in docstrings
    "RUF010", # explicit conversion flag in f-strings
    "SIM102", # combine nested ifs
    "SIM105", # prefer contextlib.suppress over try/except/pass
    "SIM117", # use single with statement with multiple contexts
    "ARG002", # unused method/function argument
    "ARG001", # unused function argument (API handlers)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101", "F401"]  # Allow unused args, assert, and unused imports in tests
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__
"**/conftest.py" = ["F401"]  # Allow unused imports in conftest

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending
line-ending = "auto"

# Mypy configuration for type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Basedpyright configuration for type checking
[tool.basedpyright]
typeCheckingMode = "basic"
exclude = [
    "tests/**",
]
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportUnusedFunction = "none"
reportUnusedClass = "none"
reportShadowedImports = "none"

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
]
